<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <EditText
        android:id="@+id/main_search_edit_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="6dp"
        android:background="#3200ff00"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:text="@string/sample_text"
        app:layout_constraintBottom_toTopOf="@+id/main_viewpager"
        app:layout_constraintEnd_toStartOf="@+id/main_search_btn"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.2" />

    <Button
        android:id="@+id/main_search_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="6dp"
        android:text="@string/search_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintStart_toEndOf="@+id/main_search_edit_text"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/main_tab_layout"
        app:layout_constraintTop_toBottomOf="@+id/main_search_edit_text"
        app:layout_constraintVertical_weight="0.8" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_viewpager" />

</androidx.constraintlayout.widget.ConstraintLayout>