<resources>
    <string name="app_name">GithubApi</string>
    <string name="search_btn">Search</string>
    <string name="sample_text">sample</string>
</resources>