...
        android:id="@+id/main_item_repo_profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_item_repo_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_item_repo_name"
        android:layout_width="0dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.8"
        app:layout_constraintStart_toStartOf="@+id/main_item_repo_name"
        app:layout_constraintTop_toBottomOf="@+id/main_item_repo_name" />

    <CheckBox
        android:id="@+id/main_item_check_bookmark"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
